--- a/css/styles.css
+++ b/css/styles.css
@@ -1,116 +1,56 @@
-*,
-*::after,
-*::before {
-  margin: 0;
+* {
   padding: 0;
-  box-sizing: inherit; 
+  box-sizing: border-box; 
 }
 
-html {
-    box-sizing: border-box;
-    font-size: 62.5%; 
-}
-  .search-form {
-    --searchButtonWidth: 75px;
-    width: 630px;
-    margin: 0 auto;
-    overflow: hidden;
-    position: relative;
-}
-  
-.search-input {
-    border: 0;
-    margin: 0;
-    padding: 1.5rem calc(var(--searchButtonWidth) + 1.5rem) 1.5rem 1.5rem;
-    width: 100%;
-    background: #ddd;
-    -webkit-appearance: none;
-    font-size: 18px;
-}
-.search-input:focus {
-    outline: 0;
-    background: white;
-}
-  .search-input:not(:placeholder-shown) ~ .search-button {
-    transform: translateX(calc(-1 * var(--searchButtonWidth)));
-}  
-  
-.search-button {
-    border: 0;
-    padding: 0.5rem;
-    border-radius: 8px;
-    position: absolute; 
-    top: 0;
-    left: 100%;
-    width: var(--searchButtonWidth);
-    transition: 0.2s;
-    background: #455A64;
-    color: white;
-    font-size: 13px;
-    height: 100%;
-}
-  .search-button:focus {
-    outline: 0;
-    background: #222;
-}
-  
-  body {
+body {
     margin: 2rem;
     background: #888;
 }
 
-
-
-  .screen-reader-text {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
+.top-nav {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right:auto;
+    margin-left:auto;
+    width: 60%;
 }
 
-  .gallery__img {
-    width: 400px;
-    height: 400px;
-    object-fit: cover;
-    align-items: center;
-    display: block; 
-    padding: 10px; 
+input {
+    outline-style: none;
+    padding: 20px;
+    width: 100%;
 }
-    .gallery__img:hover  {
-        
+
+#search {
+    margin: 0 auto;
+    display: inline-block;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: black; 
+}
+
+.gallery__img:hover  {
     transition: transform 0.3s;
     transform: scale(1.1);
-    background: white;
-    }
-
-
-@media (min-width:768px) {
+}
 
 .container {
-  width: 60%;
-  margin: 2rem auto; 
+    display: flex;
+    flex-direction: column;
+    max-width: 1024px;
+    margin: auto;
 }
-
-.gallery__img {
-    width: 600px;
-    height: 600px;
-    object-fit: cover;
-}
-
+     
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 5vw);
-  grid-gap: 2.5rem; 
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, 200px);
+    grid-gap: 25px;
 }
 
-.gallery__img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block; 
-}
+/* Previous Layout 
 
-.gallery__item--1 {
+/*.gallery__item--1 {
   grid-column-start: 1;
   grid-column-end: 3;
   grid-row-start: 1;
@@ -163,7 +103,7 @@ html {
     grid-row-end: 5;
   }
   
-  .gallery__item--8 {
+.gallery__item--8 {
     grid-column-start: 7;
     grid-column-end: 9;
     grid-row-start: 3;
@@ -171,14 +111,14 @@ html {
 
  }
   
-  .gallery__item--9 {
+.gallery__item--9 {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 5;
     grid-row-end: 7;
 }
   
-  .gallery__item--10 {
+.gallery__item--10 {
     grid-column-start: 3;
     grid-column-end: 5;
     grid-row-start: 5;
@@ -186,7 +126,7 @@ html {
 
 }
   
-  .gallery__item--11 {
+.gallery__item--11 {
     grid-column-start: 5;
     grid-column-end: 7;
     grid-row-start: 5;
@@ -194,14 +134,14 @@ html {
 
 }
   
-  .gallery__item--12 {
+.gallery__item--12 {
     grid-column-start: 7;
     grid-column-end: 9;
     grid-row-start: 5;
     grid-row-end: 7;
 
-}
-}
+}*/
+
 
 
 
